release: version 1.0.0 and update README with maven instructions